templates/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotal-api
spec:
  selector:
    matchLabels:
      app: kotal-api
  template:
    metadata:
      labels:
        app: kotal-api
    spec:
      serviceAccountName: kotal-api
      containers:
        - name: kotal-api
          image: kotalco/cloud-api:20e3690
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
          ports:
            - containerPort: 6000
