templates/dashboard.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotal-dashboard
spec:
  selector:
    matchLabels:
      app: kotal-dashboard
  template:
    metadata:
      labels:
        app: kotal-dashboard
    spec:
      containers:
        - name: kotal-dashboard
          image: kotalco/cloud-dashboard:510b95e
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
