templates/db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:15.1
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database
