templates/dashboard.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotal-dashboard
spec:
  selector:
    app: kotal-dashboard
  ports:
    - port: 3000
      targetPort: 3000
