templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kotal-route
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: kotal-dashboard
          port: 3000
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: kotal-api
          port: 6000
